or info related to the entry. <http://sourceforge.net/projects/vpopmail/>

5.4.5 - unreleased

	fernando (at) telemacro (dot) com (dot) br
	- Patch for vpgsql.c fixes bug with Postgres and roaming users
	  (POP before SMTP). [895501]

	Françoi Wautier
	- Fix method used to open database in vauth_open_update of
	  vmysql.c. [967994, 946983]

	Tom Collins
	- Fix `vuserinfo -l` output, based on Bill Shupp's patch
	  (moved code to a single function call). [961742]

5.4.4 - released 26-May-04

	Tom Collins
	- Link math lib when compiling for MySQL.
	- Create ~vpopmail and ~vpopmail/etc in configure script. [930939]
	  Note that any code creating files in ~vpopmail should probably
	  be moved from configure and into Makefile (under make install).
	- Use MAX_PW_DIR when checking max size of domain's directory.

	Ken Jones
	- vdelivermail.c: wait on pid for qmail-inject to finish
	  before continuing in deliver_mail function. [from 5.5.1]

        Michael Bowe
        - Minor documentation tweaks
        - Fix for : If roaming users were enabled, and auth module was not
          SQL based, and user's IP address was not available (eg being
          called from Courier-IMAP with authdaemon enabled), then
          open_smtp.tmp.pid files would be created for each auth 
          but never removed.

5.4.3 - released 11-Mar-04

	Tom Collins
	- Add missing link libs (m, nsl, socket) on Solaris installs.
	- Fix vsetuserquota() to write properly formatted quota to 
	  maildirsize file.
	- Update vdominfo to ignore non-domains in users/assign.
	- Update vconvert and dotqmail2valias to ignore non-domains in
	  users/assign.

5.4.2 - released 22-Feb-04

	Tom Collins
	- Remove attempts to free() static buffers in vpgsql.c. [888888]
	- Fix problems with creating valias table in vpgsql.c. [892595]
	- Remove unnecessary check for C++ from configure[.in].
	- Don't include DESTDIR when building inc_deps and lib_deps.
	  [886988]