@@ -62,6 +62,7 @@ There are three values this may contain.
 <li>email address to forward email too</li>
 <li>the string <strong>bounce-no-mailbox</strong> to bounce the email
 back to the sender.</li>
+<li>the string <strong>delete</strong> to delete the email.</li>
 </ul>
 Default is the postmaster account
 
